# ORouter

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  venv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
apps/: cli_compare_text_clients.py  cli_medtopic.py  cli_query.py  cli_text_client.py  openrouter_client.py  openrouter_text_client.py  str.py  text_chat.py  vision_chat.py
apps/medical_reports/: asthama.json  asthama_20251004_150331.json
